# docs/swagger.yaml
@@ -124,11 +124,11 @@ paths:
   /api/v1/articles:
     get:
       parameters:
-      - description: 文章名称
+      - description: 标签ID
         in: query
-        maxLength: 100
-        name: name
-        type: string
+        name: tag_id
+        required: true
+        type: integer
       - default: 1
         description: 状态
         enum:
@@ -163,37 +163,59 @@ paths:
       summary: 获取多篇文章
     post:
       parameters:
-      - description: 文章名称
-        in: body
-        maxLength: 100
-        minLength: 3
-        name: name
+      - description: 标签id
+        in: query
+        name: tag_id
         required: true
-        schema:
-          type: string
+        type: string
       - default: 1
         description: 状态
         enum:
         - 0
         - 1
-        in: body
+        in: query
         name: state
-        schema:
-          type: integer
+        type: integer
       - description: 创建者
-        in: body
+        in: query
         maxLength: 100
-        minLength: 3
+        minLength: 2
         name: created_by
-        schema:
-          type: string
+        required: true
+        type: string
+      - description: 标题
+        in: query
+        maxLength: 100
+        minLength: 2
+        name: title
+        required: true
+        type: string
+      - description: 详情
+        in: query
+        maxLength: 255
+        minLength: 2
+        name: desc
+        required: true
+        type: string
+      - description: 内容
+        in: query
+        maxLength: 4294967295
+        minLength: 2
+        name: content
+        required: true
+        type: string
+      - description: 封面URL
+        in: query
+        name: cover_image_url
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/model.Tag'
+            $ref: '#/definitions/model.Article'
         "400":
           description: 请求错误
           schema:
@@ -207,7 +229,7 @@ paths:
     delete:
       parameters:
       - description: 文章ID
-        in: path
+        in: query
         name: id
         required: true
         type: integer
@@ -234,11 +256,104 @@ paths:
         name: id
         required: true
         type: integer
-      - description: 文章名称
+      - default: 1
+        description: 状态
+        enum:
+        - 0
+        - 1
+        in: query
+        name: state
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.ArticleSwagger'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取单篇文章
+    put:
+      parameters:
+      - description: 文章id
+        in: query
+        name: id
+        required: true
+        type: string
+      - description: 标签id
+        in: query
+        name: tag_id
+        required: true
+        type: string
+      - default: 1
+        description: 状态
+        enum:
+        - 0
+        - 1
+        in: query
+        name: state
+        type: integer
+      - description: 创建者
         in: query
         maxLength: 100
-        name: name
+        minLength: 2
+        name: modified_by
+        required: true
         type: string
+      - description: 标题
+        in: query
+        maxLength: 100
+        minLength: 2
+        name: title
+        type: string
+      - description: 详情
+        in: query
+        maxLength: 255
+        minLength: 2
+        name: desc
+        type: string
+      - description: 内容
+        in: query
+        maxLength: 4294967295
+        minLength: 2
+        name: content
+        type: string
+      - description: 封面URL
+        in: query
+        name: cover_image_url
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.Article'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 更新文章
+  /api/v1/rss:
+    get:
+      parameters:
+      - description: 标签ID
+        in: query
+        name: tag_id
+        required: true
+        type: integer
       - default: 1
         description: 状态
         enum:
@@ -261,7 +376,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/model.ArticleSwagger'
+            $ref: '#/definitions/string'
         "400":
           description: 请求错误
           schema:
@@ -270,56 +385,7 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
-      summary: 获取单篇文章
-    put:
-      parameters:
-      - description: 文章ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: 文章名称
-        in: body
-        maxLength: 100
-        minLength: 3
-        name: name
-        schema:
-          type: string
-      - default: 1
-        description: 状态
-        enum:
-        - 0
-        - 1
-        in: body
-        name: state
-        schema:
-          type: integer
-      - description: 修改者
-        in: body
-        maxLength: 100
-        minLength: 3
-        name: modified_by
-        required: true
-        schema:
-          type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功
-          schema:
-            items:
-              $ref: '#/definitions/model.Tag'
-            type: array
-        "400":
-          description: 请求错误
-          schema:
-            $ref: '#/definitions/errcode.Error'
-        "500":
-          description: 内部错误
-          schema:
-            $ref: '#/definitions/errcode.Error'
-      summary: 更新文章
+      summary: 文章订阅
   /api/v1/tags:
     get:
       parameters:
@@ -478,15 +544,15 @@ paths:
   /auth:
     get:
       parameters:
-      - description: Key
+      - description: 验证码ID
         in: body
-        name: app_key
+        name: captchaId
         required: true
         schema:
           type: string
-      - description: Secret
+      - description: 验证码内容
         in: body
-        name: app_secret
+        name: value
         required: true
         schema:
           type: string
@@ -496,7 +562,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/model.Auth'
+            $ref: '#/definitions/string'
         "400":
           description: 请求错误
           schema:
@@ -505,7 +571,43 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
-      summary: 生成JWT
+      summary: 验证图形验证码
+  /getCaptcha:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/string'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 生成图形验证码
+  /show/:source:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/string'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 查看图形验证码
   /upload/file:
     post:
       parameters:
@@ -536,5 +638,5 @@ paths:
           description: 内部错误
           schema:
             $ref: '#/definitions/errcode.Error'
-      summary: 文件上传
+      summary: 多文件上传
 swagger: "2.0"
