# internal/routers/api/v1/article.go
@@ -21,6 +21,8 @@ func NewArticle() Article {
 	return Article{}
 }
 
+var false struct{}
+
 // @Summary  获取单篇文章
 // @Produce  json
 // @Param  id path int true "文章ID"
@@ -56,7 +58,7 @@ func (a Article) Get(c *gin.Context) {
 // @Param  tag_id query uint32 true "标签ID"
 // @Param  state query int false "状态" Enums(0, 1) default(1)
 // @Param  page query int false "页码"
-// @Param  page_size int false "每页数量"
+// @Param  page_size query int false "每页数量"
 // @Success  200 {object} model.ArticleSwagger "成功"
 // @Failure  400 {object} errcode.Error "请求错误"
 // @Failure  500 {object} errcode.Error "内部错误"
@@ -93,7 +95,7 @@ func (a Article) List(c *gin.Context) {
 // @Param  desc query string true "详情" minlength(2) maxlength(255)
 // @Param  content query string true "内容" minlength(2) maxlength(4294967295)
 // @Param  cover_image_url query string true "封面URL"
-// @Success  200 {object} model.Tag "成功"
+// @Success  200 {object} model.Article "成功"
 // @Failure  400 {object} errcode.Error "请求错误"
 // @Failure  500 {object} errcode.Error "内部错误"
 // @Router  /api/v1/articles [post]
@@ -128,8 +130,8 @@ func (a Article) Create(c *gin.Context) {
 // @Param  title query string false "标题" minlength(2) maxlength(100)
 // @Param  desc query string false "详情" minlength(2) maxlength(255)
 // @Param  content query string false "内容" minlength(2) maxlength(4294967295)
-// @Param  cover_image_url query false true "封面URL"
-// @Success  200 {array} model.Tag "成功"
+// @Param  cover_image_url query  string true "封面URL"
+// @Success  200 {object} model.Article "成功"
 // @Failure  400 {object} errcode.Error "请求错误"
 // @Failure  500 {object} errcode.Error "内部错误"
 // @Router  /api/v1/articles/{id} [put]
@@ -157,10 +159,10 @@ func (a Article) Update(c *gin.Context) {
 
 // @Summary  删除文章
 // @Produce  json
-// @Param  id path int true "文章ID"
+// @Param  id query int true "文章ID"
 // @Success  200 {string} string "成功"
 // @Failure  400 {object} errcode.Error "请求错误"
-// @Failure  500 {object} errcode.Error "内部错误"
+// @Failure  500 {object} errcode.Error "内部错误""
 // @Router  /api/v1/articles/{id} [delete]
 func (a Article) Delete(c *gin.Context) {
 	param := service.DeleteArticleRequest{ID: convert.StrTo(c.Param("id")).MustUInt32()}
